<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <EditText
        android:id="@+id/ed_first_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/first_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/ed_last_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@id/ed_first_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/last_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/ed_username"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/ed_last_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/ed_email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/ed_username"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/ed_mobile"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/ed_email"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/mobile"
        android:inputType="phone" />

    <EditText
        android:id="@+id/ed_home_phone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/ed_mobile"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/home_phone"
        android:inputType="phone" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/ed_home_phone"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/ed_confirmation_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/ed_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/ed_home_address"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/ed_confirmation_password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/home_address"
        android:inputType="text" />

    <EditText
        android:id="@+id/ed_work_address"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@+id/ed_home_address"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/work_address"
        android:inputType="text" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_below="@+id/ed_work_address"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorOrange"
        android:hint="@string/register"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/btn_back_to_home"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="320dp"
        android:layout_marginVertical="550dp"
        android:layout_marginBottom="10dp"
        android:onClick="onClick"
        android:src="@drawable/ic_baseline_arrow_back_ios_24" />
</RelativeLayout>